--- a/drools-framework-runtime-entity/pom.xml
+++ b/drools-framework-runtime-entity/pom.xml
@@ -10,9 +10,23 @@
   <artifactId>drools-framework-runtime-entity</artifactId>
   <name>runtime entity project</name>
   <description>runtime entity project</description>
-
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.8.1</version>
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>gwt-maven-plugin</artifactId>
