--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,16 @@
                 </executions>
             </plugin>
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.12</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
     </build>
 
 
@@ -158,8 +168,11 @@
                 <version>2.3.0</version>
             </dependency>
         </dependencies>
-
     </dependencyManagement>
+
+
+
+
     <modules>
         <module>drools-framework-common</module>
         <module>drools-framework-runtime-base</module>
