--- a/drools-runner-generator/pom.xml
+++ b/drools-runner-generator/pom.xml
@@ -30,4 +30,19 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <!--Exclude Local test cases-->
+                    <excludes>
+                        <exclude>**/*LocalTestCase*</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
