--- a/drools-framework-runtime-supervision/pom.xml
+++ b/drools-framework-runtime-supervision/pom.xml
@@ -11,7 +11,50 @@
   <description>runtime supervision project</description>
 
   <build>
+    <finalName>drools-jmx-viewer</finalName>
     <plugins>
+
+      <plugin>
+      				<groupId>org.apache.maven.plugins</groupId>
+      				<artifactId>maven-dependency-plugin</artifactId>
+      				<version>2.3</version>
+      				<executions>
+      					<execution>
+      						<id>copy-dependencies</id>
+      						<phase>package</phase>
+      						<goals>
+      							<goal>copy-dependencies</goal>
+      						</goals>
+      						<configuration>
+      							<outputDirectory>${project.build.directory}/lib</outputDirectory>
+      						</configuration>
+      					</execution>
+      				</executions>
+      			</plugin>
+      			<plugin>
+      				<groupId>org.apache.maven.plugins</groupId>
+      				<artifactId>maven-jar-plugin</artifactId>
+      				<version>2.3.1</version>
+      				<configuration>
+      					<archive>
+      						<index>true</index>
+      						<manifest>
+      							<addClasspath>true</addClasspath>
+      							<mainClass>org.chtijbug.drools.supervision.MainJMXClient</mainClass>
+      						</manifest>
+
+      						<manifestEntries>
+      							<mode>development</mode>
+      							<url>${pom.url}</url>
+      							<key>value</key>
+
+      						</manifestEntries>
+      					</archive>
+      				</configuration>
+      			</plugin>
+
+
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
