--- a/drools-runner-generator/pom.xml
+++ b/drools-runner-generator/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.chtijbug.drools</groupId>
         <artifactId>drools-framework-parent</artifactId>
-        <version>1.1.0.7-SNAPSHOT</version>
+        <version>1.1.0.7</version>
     </parent>
 
     <groupId>org.chtijbug.drools</groupId>
