--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <drools.version>5.4.1.chtijbug</drools.version>
         <jbpm.version>5.3.1.chtijbug</jbpm.version>
+        <powermock.version>1.4.12</powermock.version>
     </properties>
 
     <scm>
@@ -137,6 +138,16 @@
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
                 <version>1.8.5</version>
+            </dependency>
+            <dependency>
+                <groupId>org.powermock</groupId>
+                <artifactId>powermock-module-junit4</artifactId>
+                <version>${powermock.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.powermock</groupId>
+                <artifactId>powermock-api-mockito</artifactId>
+                <version>${powermock.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.eclipse.jdt.core.compiler</groupId>
