--- a/drools-framework-runtime-supervision/pom.xml
+++ b/drools-framework-runtime-supervision/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>drools-framework-parent</artifactId>
     <groupId>org.chtijbug.drools</groupId>
-    <version>1.1.0.10</version>
+    <version>1.1.0.11-SNAPSHOT</version>
   </parent>
   <artifactId>drools-framework-runtime-supervision</artifactId>
   <name>runtime supervision project</name>
