--- a/maven-guvnor-install-pojo-plugin/pom.xml
+++ b/maven-guvnor-install-pojo-plugin/pom.xml
@@ -3,13 +3,13 @@
     <parent>
         <artifactId>drools-framework-parent</artifactId>
         <groupId>org.chtijbug.drools</groupId>
-        <version>1.1.0.12-SNAPSHOT</version>
+        <version>1.1.0.12</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.chtijbug.drools</groupId>
     <artifactId>maven-guvnor-install-pojo-plugin</artifactId>
-    <version>1.1.0.12-SNAPSHOT</version>
+    <version>1.1.0.12</version>
     <packaging>maven-plugin</packaging>
 
     <properties>
