--- a/pom.xml
+++ b/pom.xml
@@ -244,6 +244,11 @@
                 <artifactId>xstream</artifactId>
                 <version>1.4.3</version>
             </dependency>
+            <dependency>
+                <groupId>com.googlecode.lambdaj</groupId>
+                <artifactId>lambdaj</artifactId>
+                <version>2.3.3</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
