--- a/drools-service-runner-archetype/pom.xml
+++ b/drools-service-runner-archetype/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.chtijbug.drools</groupId>
         <artifactId>drools-framework-parent</artifactId>
-        <version>1.1.0.13</version>
+        <version>1.1.0.14-SNAPSHOT</version>
     </parent>
 
     <artifactId>drools-service-runner-archetype</artifactId>
