--- a/pom.xml
+++ b/pom.xml
@@ -249,6 +249,11 @@
                 <artifactId>lambdaj</artifactId>
                 <version>2.3.3</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>1.3.2</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
