--- a/drools-framework-common/pom.xml
+++ b/drools-framework-common/pom.xml
@@ -21,6 +21,11 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.easytesting</groupId>
+            <artifactId>fest-assert</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
