--- a/pom.xml
+++ b/pom.xml
@@ -259,6 +259,11 @@
                 <artifactId>commons-io</artifactId>
                 <version>1.3.2</version>
             </dependency>
+            <dependency>
+                <groupId>org.easytesting</groupId>
+                <artifactId>fest-assert</artifactId>
+                <version>1.4</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
