--- a/drools-framework-neo4jlog/pom.xml
+++ b/drools-framework-neo4jlog/pom.xml
@@ -28,6 +28,9 @@
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j-rest-graphdb</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>org.chtijbug.drools</groupId>
+      <artifactId>drools-framework-common</artifactId>
+    </dependency>
   </dependencies>
 </project>
