--- a/pom.xml
+++ b/pom.xml
@@ -304,7 +304,7 @@
     <repository>
       <id>chtijbug-release</id>
       <name>chtijbug repo release</name>
-      <url>http://openesb-dev.org:8081/nexus/content/repositories/chtijbug-release/</url>
+      <url>http://nexus.openesb-dev.org:8081/nexus/content/repositories/chtijbug-release/</url>
     </repository>
     <repository>
       <id>chtijbug-snapshot</id>
