--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <drools.version>5.6.0-SNAPSHOT</drools.version>
-    <jbpm.version>5.5.0-SNAPSHOT</jbpm.version>
+    <drools.version>5.6.0.Final</drools.version>
+    <jbpm.version>5.5.0.Final</jbpm.version>
     <powermock.version>1.4.12</powermock.version>
     <neo4j.version>1.9</neo4j.version>
   </properties>
