--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <drools.version>5.5.3.chtijbug</drools.version>
-        <jbpm.version>5.4.2.chtijbug</jbpm.version>
+        <drools.version>5.6.0.Final</drools.version>
+        <jbpm.version>5.5.0.Final</jbpm.version>
         <powermock.version>1.4.12</powermock.version>
     </properties>
 
@@ -80,6 +80,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
+                <version>2.2.1</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -143,11 +144,6 @@
                 <artifactId>drools-framework-runtime-supervision</artifactId>
                 <version>${project.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.chtijbug.drools</groupId>
-                <artifactId>drools-framework-runtime-entity</artifactId>
-                <version>${project.version}</version>
-            </dependency>
 
             <dependency>
                 <groupId>org.drools</groupId>
@@ -173,11 +169,6 @@
                 <groupId>org.drools</groupId>
                 <artifactId>droolsjbpm-ide-common</artifactId>
                 <version>${drools.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>4.10</version>
             </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
@@ -267,7 +258,7 @@
         </dependencies>
     </dependencyManagement>
 
-    <repositories>
+    <!--repositories>
         <repository>
             <id>jboss-Snapshot</id>
             <name>jboss-Snapshot</name>
@@ -288,7 +279,7 @@
             <name>chtijbug repo release</name>
             <url>http://nexus.openesb-dev.org:8081/nexus/content/repositories/chtijbug-snapshot/</url>
         </repository>
-    </repositories>
+    </repositories-->
 
     <!--distributionManagement>
       <repository>
