--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.chtijbug.drools</groupId>
   <artifactId>drools-framework-parent</artifactId>
   <name>drools framework parent</name>
-  <version>1.1.0.18-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <parent>
@@ -18,7 +18,6 @@
     <drools.version>5.6.0.Final</drools.version>
     <jbpm.version>5.5.0.Final</jbpm.version>
     <powermock.version>1.4.12</powermock.version>
-    <neo4j.version>1.9</neo4j.version>
   </properties>
 
   <licenses>
@@ -32,12 +31,12 @@
     <developer>
       <id>nheron</id>
       <name>Nicolas Héron</name>
-      <email>nicolas.heron@chtijbug.org</email>
+      <email>nicolas.heron@pymma-software.com</email>
     </developer>
     <developer>
       <id>smangot</id>
       <name>Samuel Mangot</name>
-      <email>samuel.mangot@pymma.com</email>
+      <email>samuel.mangot@pymma-software.com</email>
     </developer>
   </developers>
 
@@ -60,7 +59,6 @@
     <module>drools-service-runner-archetype</module>
     <module>maven-guvnor-install-pojo-plugin</module>
     <module>drools-runner-generator</module>
-    <!--module>drools-framework-neo4jlog</module-->
   </modules>
 
 
@@ -69,7 +67,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
+        <version>3.1</version>
         <configuration>
           <source>1.6</source>
           <target>1.6</target>
@@ -79,7 +77,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
-        <version>2.2.1</version>
+        <version>2.4.1</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -112,7 +110,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.12</version>
+          <version>2.15</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -135,11 +133,6 @@
       <dependency>
         <groupId>org.chtijbug.drools</groupId>
         <artifactId>drools-framework-runtime-base</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.chtijbug.drools</groupId>
-        <artifactId>drools-framework-runtime-entity</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
@@ -177,11 +170,6 @@
         <groupId>org.drools</groupId>
         <artifactId>droolsjbpm-ide-common</artifactId>
         <version>${drools.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.10</version>
       </dependency>
       <dependency>
         <groupId>org.mockito</groupId>
